<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".Note">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow"
        android:background="@drawable/background_btn"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_button"
        />

    <TextView
        android:id="@+id/tvSave"
        android:layout_width="60dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/background_btn"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_note"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSave"
        android:padding="15dp"
        android:textSize="@dimen/note_title"
        android:textStyle="bold"
        android:foregroundTint="@color/black"
        android:maxLines="1"
        android:singleLine="true"/>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        android:background="#212529"/>


    <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_something"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:padding="15dp"
        android:textSize="@dimen/note_text"
        android:gravity="top"
        android:minHeight="150dp"
        android:foregroundTint="@color/black"
        android:inputType="textMultiLine"
        />

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/lemon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/lemon"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/lemon"/>

        <ImageView
            android:id="@+id/yellow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/yellow"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/yellow"/>

        <ImageView
            android:id="@+id/lilac"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/lilac"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/lilac"/>

        <ImageView
            android:id="@+id/peach"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/peach"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/peach"/>
        <ImageView
            android:id="@+id/orange"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/orange"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/orange"/>

        <ImageView
            android:id="@+id/dark_brown"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dark_brown"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/dark_brown"/>

        <ImageView
            android:id="@+id/brown"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/brown"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/brown"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/colorPalette"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_palette"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/color_palette" />

</androidx.constraintlayout.widget.ConstraintLayout>